--- a/action.yaml
+++ b/action.yaml
@@ -1,5 +1,5 @@
-name: Tweeter Action
-author: devigned
+name: Meower Action
+author: anthonylee
 description: Simple action to send a tweet via an GitHub Action.
 inputs:
   message:
